--- a/.env
+++ b/.env
@@ -10,19 +10,19 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 
-#development
-DB_HOST=127.0.0.1
-DB_PORT=8889
-DB_DATABASE=vtu
-DB_USERNAME=root
-DB_PASSWORD=root
-
-#production
+# development
 # DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=davyking_vtu
-# DB_USERNAME=davyking_admin
-# DB_PASSWORD=6(q71uG?e)tG
+# DB_PORT=8889
+# DB_DATABASE=vtu
+# DB_USERNAME=root
+# DB_PASSWORD=root
+
+# production
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=davyking_vtu
+DB_USERNAME=davyking_admin
+DB_PASSWORD=6(q71uG?e)tG
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
